# icicle

examples/rust/msm/: Cargo.toml
examples/rust/ntt/: Cargo.toml
icicle/cmake/: Common.cmake  CurvesCommon.cmake
icicle/include/api/: babybear.h  bls12_377.h  bls12_381.h  bn254.h  bw6_761.h  grumpkin.h  m31.h  pallas.h  stark252.h  vesta.h
icicle/include/api/templates/fields/: vec_ops.h  vec_ops_ext.h
icicle/include/curves/: curve_config.cuh
icicle/include/curves/params/: pallas.cuh  vesta.cuh
icicle/include/fields/: field_config.cuh  id.h
icicle/include/fields/snark_fields/: pallas_base.cuh  pallas_scalar.cuh  vesta_base.cuh  vesta_scalar.cuh
icicle/include/hash/: hash.cuh
icicle/include/msm/: msm.cuh
icicle/include/poseidon/constants/: pallas_poseidon.h  vesta_poseidon.h
icicle/src/fields/: CMakeLists.txt
icicle/src/msm/: msm.cu
icicle/src/poseidon/: constants.cu
icicle/src/poseidon2/: constants.cu
icicle/src/vec_ops/: extern.cu  extern_extension.cu  vec_ops.cu
icicle/tests/: CMakeLists.txt
scripts/: gen_c_api.py
wrappers/rust/: Cargo.toml
wrappers/rust/icicle-core/: Cargo.toml
wrappers/rust/icicle-core/src/msm/: mod.rs
wrappers/rust/icicle-core/src/vec_ops/: mod.rs
wrappers/rust/icicle-cuda-runtime/: build.rs
wrappers/rust/icicle-curves/icicle-bls12-377/: Cargo.toml
wrappers/rust/icicle-curves/icicle-bls12-381/: Cargo.toml
wrappers/rust/icicle-curves/icicle-bn254/: Cargo.toml
wrappers/rust/icicle-curves/icicle-bn254/src/vec_ops/: mod.rs
wrappers/rust/icicle-curves/icicle-bw6-761/: Cargo.toml
wrappers/rust/icicle-curves/icicle-grumpkin/: Cargo.toml
wrappers/rust/icicle-curves/icicle-grumpkin/src/: curve.rs
wrappers/rust/icicle-curves/icicle-grumpkin/src/vec_ops/: mod.rs
wrappers/rust/icicle-curves/icicle-pallas/: Cargo.toml  build.rs
wrappers/rust/icicle-curves/icicle-pallas/benches/: msm.rs
wrappers/rust/icicle-curves/icicle-pallas/src/: curve.rs
wrappers/rust/icicle-curves/icicle-pallas/src/msm/: mod.rs
wrappers/rust/icicle-curves/icicle-pallas/src/vec_ops/: mod.rs
wrappers/rust/icicle-curves/icicle-vesta/: Cargo.toml  build.rs
wrappers/rust/icicle-curves/icicle-vesta/benches/: msm.rs
wrappers/rust/icicle-curves/icicle-vesta/src/: curve.rs
wrappers/rust/icicle-curves/icicle-vesta/src/msm/: mod.rs
wrappers/rust/icicle-curves/icicle-vesta/src/vec_ops/: mod.rs
