[workspace]
resolver = "2"
members = [
  "icicle-cuda-runtime",
  "icicle-core",
  "icicle-curves/icicle-bw6-761",
  "icicle-curves/icicle-bls12-377",
  "icicle-curves/icicle-bls12-381",
  "icicle-curves/icicle-bn254",
  "icicle-curves/icicle-grumpkin",
  "icicle-curves/icicle-pallas",
  "icicle-curves/icicle-vesta",
  "icicle-fields/icicle-babybear",
  "icicle-fields/icicle-stark252",
  "icicle-hash",
]
exclude = [
  "icicle-curves/icicle-curve-template",
]

[workspace.package]
version = "2.3.1"
edition = "2021"
authors = [ "Ingonyama" ]
homepage = "https://www.ingonyama.com"
repository = "https://github.com/ingonyama-zk/icicle"

[workspace.dependencies]
icicle-core = { path = "icicle-core" }
icicle-cuda-runtime = { path = "icicle-cuda-runtime" }

[patch.crates-io]
ark-ff = { git = "https://github.com/arkworks-rs/algebra/" }
ark-ec = { git = "https://github.com/arkworks-rs/algebra/" }
ark-poly = { git = "https://github.com/arkworks-rs/algebra/" }
ark-std = { git = "https://github.com/arkworks-rs/std/" }
ark-bn254 = { git = "https://github.com/arkworks-rs/algebra/" }
ark-grumpkin = { git = "https://github.com/arkworks-rs/algebra/" }
ark-pallas = { git = "https://github.com/arkworks-rs/algebra/" }
ark-vesta = { git = "https://github.com/arkworks-rs/algebra/" }