[workspace]
resolver = "2"
members = [
  "icicle-cuda-runtime",
  "icicle-core",
  "icicle-curves/icicle-bw6-761",
  "icicle-curves/icicle-bls12-377",
  "icicle-curves/icicle-bls12-381",
  "icicle-curves/icicle-bn254",
  "icicle-curves/icicle-grumpkin",
  "icicle-curves/icicle-pallas",
  "icicle-curves/icicle-vesta",
  "icicle-fields/icicle-babybear",
  "icicle-fields/icicle-m31",
  "icicle-fields/icicle-stark252",
  "icicle-hash",
]
exclude = [
  "icicle-curves/icicle-curve-template",
]

[workspace.package]
version = "2.7.1"
edition = "2021"
authors = [ "Ingonyama" ]
homepage = "https://www.ingonyama.com"
repository = "https://github.com/ingonyama-zk/icicle"

[workspace.dependencies]
icicle-core = { path = "icicle-core" }
icicle-cuda-runtime = { path = "icicle-cuda-runtime" }

[patch.crates-io]
ark-ff = { version = "0.5.0" }
ark-ec = { version = "0.5.0" }
ark-std = { version = "0.5.0" }
ark-bn254 = { version = "0.5.0" }
ark-grumpkin = { version = "0.5.0" }
ark-pallas = { version = "0.5.0" }
ark-vesta = { version = "0.5.0" }