[package]
name = "msm"
version = "1.2.0"
edition = "2018"

[dependencies]
icicle-cuda-runtime = { path = "../../../wrappers/rust/icicle-cuda-runtime" }
icicle-core = { path = "../../../wrappers/rust/icicle-core" }
icicle-bn254 = { path = "../../../wrappers/rust/icicle-curves/icicle-bn254", features = ["g2"] }
icicle-bls12-377 = { path = "../../../wrappers/rust/icicle-curves/icicle-bls12-377" }
ark-bn254 = { git = "https://github.com/arkworks-rs/algebra", optional = true }
ark-bls12-377 = { git = "https://github.com/arkworks-rs/algebra", optional = true }
ark-ec = { git = "https://github.com/arkworks-rs/algebra", optional = true, features = ["parallel"] }
clap = { version = "<=4.4.12", features = ["derive"] }

[features]
default = ["arkworks", "profile"]
arkworks = ["ark-bn254", "ark-bls12-377", "ark-ec", "icicle-core/arkworks", "icicle-bn254/arkworks", "icicle-bls12-377/arkworks"]
profile = []

[patch.crates-io]
ark-ff = { git = "https://github.com/arkworks-rs/algebra/" }
ark-ec = { git = "https://github.com/arkworks-rs/algebra/" }
ark-poly = { git = "https://github.com/arkworks-rs/algebra/" }
ark-std = { git = "https://github.com/arkworks-rs/std/" }
ark-bn254 = { git = "https://github.com/arkworks-rs/algebra/" }
ark-grumpkin = { git = "https://github.com/arkworks-rs/algebra/" }
ark-pallas = { git = "https://github.com/arkworks-rs/algebra/" }
ark-vesta = { git = "https://github.com/arkworks-rs/algebra/" }