[package]
name = "msm"
version = "1.2.0"
edition = "2018"

[dependencies]
icicle-cuda-runtime = { path = "../../../wrappers/rust/icicle-cuda-runtime" }
icicle-core = { path = "../../../wrappers/rust/icicle-core" }
icicle-bn254 = { path = "../../../wrappers/rust/icicle-curves/icicle-bn254", features = ["g2"] }
icicle-bls12-377 = { path = "../../../wrappers/rust/icicle-curves/icicle-bls12-377" }
ark-bn254 = { version = "0.5.0", optional = true }
ark-bls12-377 = { version = "0.5.0", optional = true }
ark-ec = { version = "0.5.0", optional = true, features = ["parallel"] }
clap = { version = "<=4.4.12", features = ["derive"] }

[features]
default = ["arkworks", "profile"]
arkworks = ["ark-bn254", "ark-bls12-377", "ark-ec", "icicle-core/arkworks", "icicle-bn254/arkworks", "icicle-bls12-377/arkworks"]
profile = []

[patch.crates-io]
ark-ff = { version = "0.5.0" }
ark-ec = { version = "0.5.0" }
ark-poly = "^0.4.0"
ark-std = { version = "0.5.0" }
ark-bn254 = { version = "0.5.0" }
ark-grumpkin = { version = "0.5.0" }
ark-pallas = { version = "0.5.0" }
ark-vesta = { version = "0.5.0" }