[package]
name = "icicle-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "A library for GPU ZK acceleration by Ingonyama"
homepage.workspace = true
repository.workspace = true


[dependencies]

icicle-cuda-runtime = { workspace = true }
ark-ff = { git = "https://github.com/arkworks-rs/algebra", optional = true }
ark-ec = { git = "https://github.com/arkworks-rs/algebra", optional = true, features = ["parallel"] }
ark-poly = { git = "https://github.com/arkworks-rs/algebra", optional = true }
ark-std = { git = "https://github.com/arkworks-rs/std", optional = true }

rayon = "1.8.1"
hex = "0.4"
criterion = "0.3"

[dev-dependencies]
criterion = "0.3"
serial_test = "3.0.0"


[features]
default = []
arkworks = ["ark-ff", "ark-ec", "ark-poly", "ark-std"]
g2 = []
ec_ntt = []
devmode = []
