[package]
name = "icicle-bls12-381"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Rust wrapper for the CUDA implementation of BLS12-381 pairing friendly elliptic curve by Ingonyama"
homepage.workspace = true
repository.workspace = true

[dependencies]
icicle-core = { workspace = true }
icicle-cuda-runtime = { workspace = true }
ark-bls12-381 = { git = "https://github.com/arkworks-rs/algebra", optional = true }
criterion = "0.3"

[build-dependencies]
cmake = "0.1.50"

[dev-dependencies]
criterion = "0.3"
ark-bls12-381 = { git = "https://github.com/arkworks-rs/algebra" }
ark-std = { git = "https://github.com/arkworks-rs/std" }
ark-ff = { git = "https://github.com/arkworks-rs/algebra" }
ark-ec = { git = "https://github.com/arkworks-rs/algebra" }
ark-poly = { git = "https://github.com/arkworks-rs/algebra" }
icicle-core = { path = "../../icicle-core", features = ["arkworks"] }
icicle-bls12-381 = { path = ".", features = ["arkworks"] }
serial_test = "3.0.0"

[features]
default = []
g2 = ["icicle-core/g2"]
ec_ntt = ["icicle-core/ec_ntt"]
devmode = ["icicle-core/devmode"]
arkworks = ["ark-bls12-381", "icicle-core/arkworks"]

[[bench]]
name = "ecntt"
harness = false

[[bench]]
name = "ntt"
harness = false

[[bench]]
name = "msm"
harness = false
