[package]
name = "icicle-bw6-761"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Rust wrapper for the CUDA implementation of BW6-761 pairing friendly elliptic curve by Ingonyama"
homepage.workspace = true
repository.workspace = true

[dependencies]
icicle-core = { workspace = true }
icicle-cuda-runtime = { workspace = true }
icicle-bls12-377 = { path = "../../icicle-curves/icicle-bls12-377", features = ["bw6-761"] }
ark-bw6-761 = { git = "https://github.com/arkworks-rs/algebra", optional = true }
criterion = "0.3"

[build-dependencies]
cmake = "0.1.50"

[dev-dependencies]
criterion = "0.3"
ark-bw6-761 = { git = "https://github.com/arkworks-rs/algebra" }
ark-std = { git = "https://github.com/arkworks-rs/std" }
ark-ff = { git = "https://github.com/arkworks-rs/algebra" }
ark-ec = { git = "https://github.com/arkworks-rs/algebra" }
ark-poly = { git = "https://github.com/arkworks-rs/algebra" }
icicle-core = { path = "../../icicle-core", features = ["arkworks"] }
icicle-bw6-761 = { path = ".", features = ["arkworks"] }
serial_test = "3.0.0"

[features]
default = []
g2 = ["icicle-bls12-377/bw6-761-g2"]
devmode = ["icicle-core/devmode"]
arkworks = ["ark-bw6-761", "icicle-core/arkworks", "icicle-bls12-377/arkworks"]

# [[bench]]
# name = "ecntt" #sane compilation times only with the devmode enabled
# harness = false # Criterion provides own harness

[[bench]]
name = "ntt"
harness = false

[[bench]]
name = "msm"
harness = false
