[package]
name = "icicle-pallas"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Rust wrapper for the CUDA implementation of Pallas elliptic curve by Ingonyama"
homepage.workspace = true
repository.workspace = true

[dependencies]
criterion = "0.3"
icicle-core = { workspace = true }
icicle-cuda-runtime = { workspace = true }
ark-pallas = { git = "https://github.com/arkworks-rs/algebra", optional = true}

[build-dependencies]
cmake = "0.1.50"

[dev-dependencies]
criterion = "0.3"
ark-std = { git = "https://github.com/arkworks-rs/std" }
ark-ff = { git = "https://github.com/arkworks-rs/algebra" }
ark-ec = { git = "https://github.com/arkworks-rs/algebra" }
ark-poly = { git = "https://github.com/arkworks-rs/algebra" }
icicle-core = { path = "../../icicle-core", features = ["arkworks"] }
icicle-pallas = { path = ".", features = ["arkworks"] }

[features]
default = []
ec_ntt = ["icicle-core/ec_ntt"]
devmode = ["icicle-core/devmode"]
arkworks = ["ark-pallas", "icicle-core/arkworks"]

[[bench]]
name = "msm"
harness = false
