[package]
name = "icicle-pallas"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Rust wrapper for the CUDA implementation of Pallas elliptic curve by Ingonyama"
homepage.workspace = true
repository.workspace = true

[dependencies]
criterion = "0.3"
icicle-core = { workspace = true }
icicle-cuda-runtime = { workspace = true }
ark-pallas = { version = "0.5.0", optional = true}

[build-dependencies]
cmake = "0.1.50"

[dev-dependencies]
criterion = "0.3"
ark-std = { version = "0.5.0" }
ark-ff = { version = "0.5.0" }
ark-ec = { version = "0.5.0" }
ark-poly = { version = "0.5.0" }
icicle-core = { path = "../../icicle-core", features = ["arkworks"] }
icicle-pallas = { path = ".", features = ["arkworks"] }

[features]
default = []
ec_ntt = ["icicle-core/ec_ntt"]
devmode = ["icicle-core/devmode"]
arkworks = ["ark-pallas", "icicle-core/arkworks"]

[[bench]]
name = "msm"
harness = false
