[package]
name = "icicle-vesta"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Rust wrapper for the CUDA implementation of Vesta elliptic curve by Ingonyama"
homepage.workspace = true
repository.workspace = true

[dependencies]
criterion = "0.3"
icicle-core = { workspace = true }
icicle-cuda-runtime = { workspace = true }
ark-vesta = { version = "0.4.0", optional = true }

[build-dependencies]
cmake = "0.1.50"

[dev-dependencies]
criterion = "0.3"
ark-std = "0.4.0"
ark-ff = "0.4.0"
ark-ec = "0.4.0"
ark-poly = "0.4.0"
icicle-core = { path = "../../icicle-core", features = ["arkworks"] }
icicle-vesta = { path = ".", features = ["arkworks"] }

[features]
default = []
ec_ntt = ["icicle-core/ec_ntt"]
devmode = ["icicle-core/devmode"]
arkworks = ["ark-vesta", "icicle-core/arkworks"]

[[bench]]
name = "msm"
harness = false
